--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
     <!-- cloud services & IT Advisory/ consulting start -->
     <section class="cs-it-services container">
         <div class="row container">
+            <!-- cloud services -->
             <div class="col-lg-4">
                 <h3 class="title text-primary text-left"><a href="products/cloud_services.html">Cloud Services</a></h3>
                 <p>
@@ -388,6 +389,7 @@
                 </div>
             </div>
 
+            <!-- consulting -->
             <div class="col-lg-8">
                 <h3 class="title text-primary text-left"><a href="products/consulting.html">IT Advisory / Consulting</a></h3>
                 <p>
@@ -413,7 +415,7 @@
                             </div>
                             
                             <div class="service-home col-lg-6 d-flex border-bottom border-secondary">
-                                <a href="products/iot.html" class="d-flex">
+                                <a href="products/consulting-iot.html" class="d-flex">
                                     <img style="height: 70%;" class="my-auto" src="./assets/images/services icons/IT Advisory _ Consulting/IoT.png" alt="">
                                     <h6 class="pl-2 my-auto">Internet of Things Consulting</h6>
                                 </a>
