--- a/industries.html
+++ b/industries.html
@@ -42,7 +42,7 @@
                 <!-- right -->
                 <div class="contact">
                     <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>+27 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.africa</a>
+                    <a href="mailto:info@qualitydesigns.africa" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.africa</a>
                     <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
                 </div>
@@ -77,20 +77,6 @@
                             <!-- solutions and services dropdown items -->
                             <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
 
-                                <!-- consulting -->
-                                <li class="dropdown-submenu">
-                                    <!-- consulting dropdown toggle/link -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/consulting.html">Consulting</a>
-                                    <!-- consulting dropdown items -->
-                                    <ul class="dropdown-menu">
-                                        <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="./products/consulting.html#strategy-and-oprations">Strategy and Operations</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting.html#technology-consulting">Technology Consulting</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting.html#project-management-services">Project Management Services</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting.html#">To Add</a>
-                                        </li>
-                                    </ul>
-                                </li>
 
                                 <!-- Digital Solutions -->
                                 <li class="dropdown-submenu">
@@ -99,14 +85,16 @@
                                     <!-- digital solutions dropdown items -->
                                     <ul class="dropdown-menu">
                                         <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#customer-relationship-management">Customer Relationship Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#electronic-content-management">Electronic Content Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#eprocurement">eProcurement</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#real-eastate-management-system">Real Estate Management System</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#custom-application-development">Custom Application Development</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#project-portfolio-management">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#enterprise-resource-planning">Enterprise Resource Planning</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital.html#web-and-mobile-applications">Web and Mobile Apllications</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-ecm.html">Enterprise Content Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-erp.html">Enterprise Resource Planning</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-payroll.html">Payroll</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-ppm.html">Project Portfolio Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-realestate.html">Real Estate Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-procurement.html">Procurement</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-customdev.html">Custom Development</a>
+                                            <a class="dropdown-item text-primary d-none" href="./products/digital.html">Coming Soon</a>
+
                                         </li>
                                     </ul>
                                 </li>
@@ -117,22 +105,26 @@
                                     <a  class="dropdown-item text-primary" tabindex="-1" href="./products/cloud_services.html">Cloud Services</a>
                                     <!-- cloud services dropdown items -->
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item text-primary" href="./products/cloud_services.html#infrastructure-as-a-service">Infrastructure As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./products/cloud_services.html#software-as-a-service">Software As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-saas.html">Software As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-paas.html">Pltform As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-iaas.html">Infrastructure As A Sercvice</a>
                                     </ul>
                                 </li>
 
-                                <!-- Devices -->
+                                <!-- consulting -->
                                 <li class="dropdown-submenu">
-                                    <!-- devices dropdownlink/toggle -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/devices.html">Devices</a>
-                                    <!-- devices dropdown items -->
+                                    <!-- consulting dropdown toggle/link -->
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./products/consulting.html">Consulting</a>
+                                    <!-- consulting dropdown items -->
                                     <ul class="dropdown-menu">
-                                      <li class="dropdown-submenu">
-                                        <a class="dropdown-item text-primary" href="./products/devices.html#push-to-talk">Push To Talk</a>
-                                        <a class="dropdown-item text-primary" href="./products/devices.html.html#">To Add</a>
-
-                                      </li>
+                                        <li class="dropdown-submenu">
+                                            <a class="dropdown-item text-primary" href="./products/consulting-governance.html">Governance, Risk & Compliance</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-strategy.html">Strategy</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-bigdata.html">Big Data & Analytics</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-program.html">Program Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-ai.html">Artificial Intelligence</a>
+                                        </li>
                                     </ul>
                                 </li>
 
@@ -147,14 +139,14 @@
                             </a>
                             <!-- solutions and services dropdown items -->
                             <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#banking">Financial Services</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#retail">Retail & Customers</a class="text-primary"></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#government">Government Sector</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#healthcare">Healthcare</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#energy">Natural Resources</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#manufacturing">Manufacturing</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#education">Education</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="industries.html#media">Media & Communications</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#banking">Financial Services</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#retail">Retail & Customers</a class="text-primary"></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#manufacturing">Manufacturing</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#government">Public Sector</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#healthcare">Healthcare</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#education">Education</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#energy">Transportation</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="#media">Media & Communications</a></li>
                             </ul>
                         </li>
 
@@ -333,7 +325,7 @@
 
             
             <!-- Transportation -->
-            <div id="transportation" class="industry my-3 col-lg-6 row">
+            <div id="energy" class="industry my-3 col-lg-6 row">
                 <div class="title col-12">
                     <h4><span class="light-sans dark-grey">Transportation</span></h4>
                 </div>
