--- a/products/consulting-bigdata.html
+++ b/products/consulting-bigdata.html
@@ -34,7 +34,6 @@
     </div>
     <!-- Loader End -->
     <!-- Header Start -->
-    <!-- Header Start -->
     <header class=" w-100 bg-white container-fluid p-0">
         <div class="">
             <!-- top header -->
@@ -44,7 +43,7 @@
                 <!-- right -->
                 <div class="contact">
                     <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>+27 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
+                    <a href="mailto:info@qualitydesigns.co.za" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
                     <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
                 </div>
@@ -79,21 +78,6 @@
                             <!-- solutions and services dropdown items -->
                             <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
 
-                                <!-- consulting -->
-                                <li class="dropdown-submenu">
-                                    <!-- consulting dropdown toggle/link -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./consulting.html">Consulting</a>
-                                    <!-- consulting dropdown items -->
-                                    <ul class="dropdown-menu">
-                                        <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="./consulting.html#strategy-and-oprations">Strategy and Operations</a>
-                                            <a class="dropdown-item text-primary" href="./consulting.html#technology-consulting">Technology Consulting</a>
-                                            <a class="dropdown-item text-primary" href="./consulting.html#project-management-services">Project Management Services</a>
-                                            <a class="dropdown-item text-primary" href="./consulting.html#">To Add</a>
-                                        </li>
-                                    </ul>
-                                </li>
-
                                 <!-- Digital Solutions -->
                                 <li class="dropdown-submenu">
                                     <!-- digital solutions and services dropdown link/toggle -->
@@ -101,14 +85,16 @@
                                     <!-- digital solutions dropdown items -->
                                     <ul class="dropdown-menu">
                                         <li class="dropdown-submenu">
-                                            <a class="dropdown-item text-primary" href="./digital.html#customer-relationship-management">Customer Relationship Management</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#electronic-content-management">Electronic Content Management</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#eprocurement">eProcurement</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#real-eastate-management-system">Real Estate Management System</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#custom-application-development">Custom Application Development</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#project-portfolio-management">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#enterprise-resource-planning">Enterprise Resource Planning</a>
-                                            <a class="dropdown-item text-primary" href="./digital.html#web-and-mobile-applications">Web and Mobile Apllications</a>
+                                            <a class="dropdown-item text-primary" href="./digital-ecm.html">Enterprise Content Management</a>
+                                            <a class="dropdown-item text-primary" href="./digital-erp.html">Enterprise Resource Planning</a>
+                                            <a class="dropdown-item text-primary" href="./digital-payroll.html">Payroll</a>
+                                            <a class="dropdown-item text-primary" href="./digital-ppm.html">Project Portfolio Management</a>
+                                            <a class="dropdown-item text-primary" href="./digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./digital-realestate.html">Real Estate Management</a>
+                                            <a class="dropdown-item text-primary" href="./digital-procurement.html">Procurement</a>
+                                            <a class="dropdown-item text-primary" href="./digital-customdev.html">Custom Development</a>
+                                            <a class="dropdown-item text-primary d-none" href="./digital.html">Coming Soon</a>
+
                                         </li>
                                     </ul>
                                 </li>
@@ -119,22 +105,26 @@
                                     <a  class="dropdown-item text-primary" tabindex="-1" href="./cloud_services.html">Cloud Services</a>
                                     <!-- cloud services dropdown items -->
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item text-primary" href="./cloud_services.html#infrastructure-as-a-service">Infrastructure As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./cloud_services.html#software-as-a-service">Software As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-saas.html">Software As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-paas.html">Pltform As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-iaas.html">Infrastructure As A Sercvice</a>
                                     </ul>
                                 </li>
 
-                                <!-- Devices -->
+                                <!-- consulting -->
                                 <li class="dropdown-submenu">
-                                    <!-- devices dropdownlink/toggle -->
-                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./devices.html">Devices</a>
-                                    <!-- devices dropdown items -->
+                                    <!-- consulting dropdown toggle/link -->
+                                    <a  class="dropdown-item text-primary" tabindex="-1" href="./consulting.html">Consulting</a>
+                                    <!-- consulting dropdown items -->
                                     <ul class="dropdown-menu">
-                                      <li class="dropdown-submenu">
-                                        <a class="dropdown-item text-primary" href="./devices.html#push-to-talk">Push To Talk</a>
-                                        <a class="dropdown-item text-primary" href="./devices.html.html#">To Add</a>
-
-                                      </li>
+                                        <li class="dropdown-submenu">
+                                            <a class="dropdown-item text-primary" href="./consulting-governance.html">Governance, Risk & Compliance</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-strategy.html">Strategy</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-bigdata.html">Big Data & Analytics</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-program.html">Program Management</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-ai.html">Artificial Intelligence</a>
+                                        </li>
                                     </ul>
                                 </li>
 
@@ -151,11 +141,11 @@
                             <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
                                 <li class="dropdown-item"><a class="text-primary" href="../industries.html#banking">Financial Services</a></li>
                                 <li class="dropdown-item"><a class="text-primary" href="../industries.html#retail">Retail & Customers</a class="text-primary"></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#government">Government Sector</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#healthcare">Healthcare</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#energy">Natural Resources</a></li>
                                 <li class="dropdown-item"><a class="text-primary" href="../industries.html#manufacturing">Manufacturing</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#government">Public Sector</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#healthcare">Healthcare</a></li>
                                 <li class="dropdown-item"><a class="text-primary" href="../industries.html#education">Education</a></li>
+                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#energy">Transportation</a></li>
                                 <li class="dropdown-item"><a class="text-primary" href="../industries.html#media">Media & Communications</a></li>
                             </ul>
                         </li>
