--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="my-auto col-lg-12 col-md-12" >
                     <div class="title dark-grey">
                         <!-- <h6 class="title-primary">about Quality Designs</h6> -->
-                        <h3 class="title-blue dark-grey"> <span class="light-sans dark-grey">about</span>  Quality Designs</h3>
+                        <h3 class="title-blue " style="color: #19232E !important;"> <span class="light-sans " style="color: #19232E !important;">about</span>  Quality Designs</h3>
                     </div>
 
                     <!-- about text -->
@@ -253,7 +253,7 @@
                         workplace productivity, and customer experience through the effective use and adoption
                         of technology.
                     </p>
-                    <a href="about.html" class="btn btn-primary px-3 py-0 mt-0">Read More</a>
+                    <a href="about.html" class="btn btn-primary square-btn mt-0">Read More</a>
 
                     <div>
                         <i></i>
